--- a/stylesheets/scss/_general.scss
+++ b/stylesheets/scss/_general.scss
@@ -104,15 +104,7 @@ body {
     @include flex-direction(column);
     @include justify-content(space-between);
     max-width: $site-width-wide;
-
-    .public & {
-      min-height: 100vh;
-    }
-
-    .editmode & {
-      min-height: calc(100vh - 40px);
-      margin-bottom: 40px;
-    }
+    min-height: 100vh;
   }
 
   .no-flexbox .front-page & {
